# k_means_example

./: .gitignore  CMakeLists.txt  README.md
include/: data.h  ui_stuff.h
src/: data.c  main.c  main_sizeof_array.c  main_with_widgets.c  ui_stuff.c
